CONF: Update makefile

--- a/cpu-api/Makefile
+++ b/cpu-api/Makefile
@@ -1,9 +1,12 @@
-
-all: hw1
+all: hw1 hw2
 
 clean:
-	rm -f hw1
+	rm -f hw1 hw2
 
 hw1: hw1.c
 	gcc -o hw1 hw1.c -Wall
+
+hw2: hw2.c
+	gcc -o hw2 hw2.c -Wall
+
 
