FEAT: rewrite all my output files

--- a/cpu-api/Makefile
+++ b/cpu-api/Makefile
@@ -2,12 +2,12 @@ CC = gcc
 CFLAGS = -Wall
 
 SRC := $(filter-out hw_template.c, $(wildcard *.c))
-OBJ := $(SRC:.c=.o)
+OBJ := $(patsubst %.c,%,$(SRC))
 
 all: $(OBJ)
 
 clean:
 	rm -f $(OBJ)
 
-%.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@
+%: %.c
+	$(CC) $(CFLAGS) $< -o $@
